--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,23 @@ services:
     environment:
       - DJANGO_SETTINGS_MODULE=recipe_site.settings
     command: python manage.py runserver 0.0.0.0:8000
+
+  nginx:
+    build:
+      context: ./nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt:/etc/letsencrypt
+    depends_on:
+      - web
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/lib/letsencrypt:/var/lib/letsencrypt
+    command: certonly --webroot --webroot-path=/var/www/certbot --email kochenof@yandex.ru --agree-tos --no-eff-email -d kochenov.ru -d www.kochenov.ru
