--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,7 @@
-# Используем официальный образ nginx
 FROM nginx:latest
 
-# Копируем наши конфигурационные файлы в контейнер
+# Копируем основной конфигурационный файл Nginx
 COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+
+# Копируем дополнительные конфигурации (например, для виртуальных хостов)
 COPY ./nginx/conf.d/ /etc/nginx/conf.d/
