тестирую nginx и ssl

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,36 +1,47 @@
-server {
-    listen 80;
-    server_name www.kochenov.ru kochenov.ru;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /var/run/nginx.pid;
 
-    # Переадресация с HTTP на HTTPS
-    return 301 https://kochenov.ru$request_uri;
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name www.kochenov.ru;
+http {
+    server {
+        listen 80;
+        server_name www.kochenov.ru kochenov.ru;
 
-    # SSL сертификаты
-    ssl_certificate /etc/letsencrypt/live/kochenov.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/kochenov.ru/privkey.pem;
+        # Переадресация с HTTP на HTTPS
+        return 301 https://kochenov.ru$request_uri;
+    }
 
-    # Переадресация с www.kochenov.ru на kochenov.ru
-    return 301 https://kochenov.ru$request_uri;
-}
+    server {
+        listen 443 ssl;
+        server_name www.kochenov.ru;
 
-server {
-    listen 443 ssl;
-    server_name kochenov.ru;
+        # SSL сертификаты
+        ssl_certificate /etc/letsencrypt/live/kochenov.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/kochenov.ru/privkey.pem;
 
-    # SSL сертификаты
-    ssl_certificate /etc/letsencrypt/live/kochenov.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/kochenov.ru/privkey.pem;
+        # Переадресация с www.kochenov.ru на kochenov.ru
+        return 301 https://kochenov.ru$request_uri;
+    }
 
-    location / {
-        proxy_pass http://web:8000; # Прокси на ваше Django-приложение
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 443 ssl;
+        server_name kochenov.ru;
+
+        # SSL сертификаты
+        ssl_certificate /etc/letsencrypt/live/kochenov.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/kochenov.ru/privkey.pem;
+
+        location / {
+            proxy_pass http://web:8000; # Прокси на ваше Django-приложение
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
