--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,3 @@
-# docker-compose.yml
-
-version: '3.8'
-
 services:
   web:
     build:
@@ -16,21 +12,20 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
 
   nginx:
-    build:
-      context: ./nginx
-    container_name: nginx
+    image: nginx:alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - 80:80
+      - 443:443
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt:/etc/letsencrypt
+      - ./var/www/certbot:/var/www/certbot  # Убедитесь, что путь правильный
     depends_on:
       - web
+
   certbot:
     image: certbot/certbot
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
-      - /var/lib/letsencrypt:/var/lib/letsencrypt
+      - ./var/www/certbot:/var/www/certbot  # Обновите путь
     command: certonly --webroot --webroot-path=/var/www/certbot --email kochenof@yandex.ru --agree-tos --no-eff-email -d kochenov.ru -d www.kochenov.ru
